# rhna-apr-emails

./: ABAG council emails.csv  Calculate APR progress - 6th cycle RHNA ratios.ipynb  Email PDFs to city councils.ipynb  Make APR letter PDFs.ipynb  gmail.py  gmail_auth.py  pyproject.toml
