[tool.poetry]
name = "yimby-emails"
version = "0.1.0"
description = ""
authors = ["Sidharth Kapur <sidharthkapur1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
weasyprint = "^54.3"
notebook = "^6.4.10"
pandas = "^1.4.2"
openpyxl = "^3.0.9"
google-api-python-client = "^2.45.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
